# ShoppingListBackend

./: .gitignore  README.md  lists.db  lists.py  pyproject.toml  run.py
lists/: __init__.py  forms.py  lists.db  models.py  routes.py  run.py
lists/templates/: about.html  additem.html  addlist.html  changepurchased.html  deleteitem.html  deletelist.html  editlist.html  home.html
lists/templates/includes/: list_modals.html
templates/: about.html  home.html
